// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`process (default.vue) returns expected string: default.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (json.vue) returns expected string: json.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (json-locale.vue) returns expected string: json-locale.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"ja\\",\\"resource\\":{\\"hello\\":\\"こんにちは！\\"}});",
  "Component.__i18n.push({\\"locale\\":\\"en\\",\\"resource\\":{\\"hello\\":\\"hello!\\"}});",
]
`;

exports[`process (json-src-import.vue) returns expected string: json-src-import.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (json5.vue) returns expected string: json5.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (json5-locale.vue) returns expected string: json5-locale.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"ja\\",\\"resource\\":{\\"hello\\":\\"こんにちは！\\"}});",
  "Component.__i18n.push({\\"locale\\":\\"en\\",\\"resource\\":{\\"hello\\":\\"hello!\\"}});",
]
`;

exports[`process (json5-src-import.vue) returns expected string: json5-src-import.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (no-i18n.vue) returns expected string: no-i18n.vue 1`] = `Array []`;

exports[`process (yaml.vue) returns expected string: yaml.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;

exports[`process (yaml-locale.vue) returns expected string: yaml-locale.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"ja\\",\\"resource\\":{\\"hello\\":\\"こんにちは！\\"}});",
  "Component.__i18n.push({\\"locale\\":\\"en\\",\\"resource\\":{\\"hello\\":\\"hello!\\"}});",
]
`;

exports[`process (yaml-src-import.vue) returns expected string: yaml-src-import.vue 1`] = `
Array [
  "Component.__i18n = Component.__i18n || [];",
  "Component.__i18n.push({\\"locale\\":\\"\\",\\"resource\\":{\\"ja\\":{\\"hello\\":\\"こんにちは！\\"},\\"en\\":{\\"hello\\":\\"hello!\\"}}});",
]
`;
